public/css/specificrequeststyle.css
#header {
    position: relative;
    margin-left: 121px;
    margin-top: 40px;
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 700;
    font-size: 30px;
    line-height: 54px;
    /* identical to box height */
    color: #000000;
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
}

.divider {
    margin-left: 10px;
    margin-right: 10px;
}

#subheader {
    position: relative;
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    line-height: 54px;
    /* identical to box height */
    color: #ABABAB;
}

.container{
    font-family: 'Poppins', sans-serif; 
    font-size: 18px;
    font-weight: 500;
    max-width: 1290px;
    margin:0px auto 60px;
    background: none;
    box-shadow: none;
    box-sizing: border-box;
    padding:20px 7px;
    color:#000;
}

#selected {
    border-bottom: solid #0C8039 5px;
    color: #000;
    transition: 0.25s
}

.approval-request-href, .approval-request-href:visited, .approval-request-href:link, .approval-request-href:active,
.contract-repository-href, .contract-repository-href:visited, .contract-repository-href:link, .contract-repository-href:active
{
    text-decoration: none;
    color: #ABABAB;
}

.approval-request-href:hover, .contract-repository-href:hover {
    color: #000;
    transition: 0.25s;
}

#status {
    float: right;
    margin-right: 121px;
    display: block;
}

#statusNewDiv {
    display: block;
    text-align: end;
}

.status-text {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    line-height: 30px;
    margin-right: 8px;
}

.actual {
    font-weight: 400;
}

.nav {
    justify-content:space-between;
}

.nav-tabs {
    padding: 0px;
    margin-right: 20px;
    margin-bottom: 15px;
    border-style: none;
}

.nav-item {
    font-family: 'Poppins';
    font-style: normal;
    font-size: 18px;
    line-height: 30px;
    font-weight: 700;
    margin-right: 10px;
    border: none;
    outline: none;
    background: transparent;
    padding-bottom: 0px;
    color:#ABABAB;
}

.nav-item:active, .nav-item:focus, .selected {
    border-bottom: solid #0C8039 5px;
    color: #000;
    transition: 0.25s
}

.nav-item:hover {
    color: #000;
    transition: 0.25s
}

#summary-table, #feedback-history, #discussion-div, .files-div, #negotiation-div {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    padding: 30px 40px;
    line-height: 30px;
    color: #000;
    background: rgba(217, 217, 217, 0.2);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    overflow-y:auto;
    height: 600px;
}

#discussion-div, #negotiation-div {
    min-height: 600px;
    position: relative;
}

#upload-file-div {
    font-family: 'Poppins';
    font-style: normal;
    font-size: 18px;
    font-weight: bolder;
    margin-bottom: 20px;
}

.mark-btn {
    width: 100%;
    padding: 8px 15px;
    font-family: 'Poppins', sans-serif;
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    margin: 0px 0px 15px;
    background: #D9D9D9;
    box-shadow: 0px 4px 4px 0px rgba(0,0,0,.25);
    letter-spacing: 1px;
    outline: none;
    border: none;
    color: white;
    cursor: pointer;
}

.mark-btn:hover {
    background: #9F9F9F;
    color: #fff;
    transition: 0.25s;
}

.text-input {
    height:auto;
    padding: 10px 15px;
    margin-bottom: 5px;
    gap: 10px;
    background: #D9D9D9;
    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
    border: none;
    width: 100%;
    cursor: default;
    white-space: initial;
    word-wrap: break-word;
    resize: none;
}

.third-party-modal {
    padding: 10px 15px;
    margin-bottom: 5px;
    gap: 10px;
    background: #FFFFFF;
    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
    border: none;
    width: 100%;
}

.subject-matter {
    height:auto;
    width: 100%;
    padding: 10px 15px;
    margin-bottom: 5px;
    resize: none;
    gap: 10px;
    background: #D9D9D9;
    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
    border: none;
    cursor: default;
}

.feedback-header, .discussion-header, .version-header, .files-header, .changes-header {
    font-style: normal;
    font-weight: 700;
    font-size: 20px;
}

.discussion-header {
    margin-bottom: 1em;
}

.version-header {
    display: inline-flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    margin-bottom: 20px;
}

.revision-form {
    font-size: 16px;
    float: right;
}

.feedback-container, .version-comments {
    background: rgba(12, 128, 57, 0.6);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    padding: 10px 15px;
    margin-bottom: 20px;
}

.version-comments {
    background: #D9D9D9;
}

#messages {
    float: right;
    width: 80%;
    min-height: 100px;
    background: rgba(12, 128, 57, 0.6);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    padding: 10px 15px;
    margin-bottom: 20px;
}

.not-from-logged-user {
    float: left !important;
    background: #D9D9D9 !important;
}

.feedback-author, .version-feedback-author, .discussion-author, .negotiation-author {
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
}

.feedback-date, .discussion-date {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 400;
    font-size: 12px;
    line-height: 18px;
    color: rgba(0, 0, 0, 0.5);
}

.profile-pic {
    display: inline-block;
    background-color: #5388D8;
    margin: 10px;
    border-radius: 50%;
}

.pic-inner, .disc-pic-inner {
    color: #000;
    display: table-cell;
    vertical-align: middle; 
    text-align: center;
    text-decoration: none;
    height: 45px;
    width: 45px;
    font-style: normal;
    font-weight: 700;
    font-size: 20px;
}

#feedback-details-div, #discussion-details-div {
    display: inline-flex;
    align-items: center;
}

#author-date-div {
    display: block;
}

.content {
    margin-left: 65px;
}
/* ... */

